--- a/BirchEngine/BirchEngine.vcxproj
+++ b/BirchEngine/BirchEngine.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Src\ECS\KeyboardController.h" />
     <ClInclude Include="Src\ECS\ProjectileComponent.h" />
     <ClInclude Include="Src\ECS\UILabel.h" />
+    <ClInclude Include="Src\Types.h" />
     <ClInclude Include="Src\Vector2D.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\GameObject.h" />
