--- a/BirchEngine/BirchEngine.vcxproj.filters
+++ b/BirchEngine/BirchEngine.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="Src\ECS\UILabel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
