--- a/BirchEngine/BirchEngine.vcxproj
+++ b/BirchEngine/BirchEngine.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="Src\ECS\ColliderComponent.h" />
     <ClInclude Include="Src\ECS\Components.h" />
     <ClInclude Include="Src\ECS\TileComponent.h" />
+    <ClInclude Include="Src\ECS\TrailComponent.h" />
     <ClInclude Include="Src\ECS\TransformComponent.h" />
     <ClInclude Include="Src\ECS\SpriteComponent.h" />
     <ClInclude Include="Src\ECS\KeyboardController.h" />
