--- a/BirchEngine/BirchEngine.vcxproj.filters
+++ b/BirchEngine/BirchEngine.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="Src\Types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\ECS\TrailComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
